src/objects/Apttus_Config2__ProductAttributeTypeMember__c.object
<CustomObject>
    <description>Represents the association between a product and an attribute type.</description>
    <fields>
        <fullName>Apttus_Config2__AttributeId__c</fullName>
        <description>ID of the attribute to which this type is associated</description>
        <inlineHelpText>ID of the attribute to which this type is associated</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Apttus_Config2__ProductAttribute__c</referenceTo>
        <relationshipLabel>Attribute Types</relationshipLabel>
        <relationshipName>AttributeTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AttributeType__c</fullName>
        <description>The product attribute type</description>
        <inlineHelpText>The product attribute type</inlineHelpText>
        <label>Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product associated with the attribute type</description>
        <inlineHelpText>ID of the product associated with the attribute type</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Attribute Types</relationshipLabel>
        <relationshipName>AttributeTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Attribute Type Member</label>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>AttributeType Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Type Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>